--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 </head>
 
 <body>
-
+    <section class="1"></section>
+    <section class="2"></section>
+    <section class="3"></section>
+    <section class="4"></section>
+    <section class="5"></section>
+    <section class="6"></section>
+    <section class="7"></section>
 </body>
 
 </html>
