Step3.1: Each flexbox gets color, 0-600px settings set up

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 
 <body>
-    <section class="1"></section>
-    <section class="2"></section>
-    <section class="3"></section>
-    <section class="4"></section>
-    <section class="5"></section>
-    <section class="6"></section>
-    <section class="7"></section>
+    <section class="one">One</section>
+    <section class="two">Two</section>
+    <section class="three">Three</section>
+    <section class="four">Four</section>
+    <section class="five">Five</section>
+    <section class="six">Six</section>
+    <section class="seven">Seven</section>
 </body>
 
 </html>
